--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,11 +6,12 @@ header {
     width: 100%;
     height: 80px;
     position: fixed;
-    margin-top: 0;
-    margin-left: 0;
+    /* margin-top: 0; */   /* Changed */
+    /* margin-left: 0; */  /* Changed */
     top: 0;
     left: 0;
     background: rgb(61, 2, 2);
+    z-index: 1000;  /* Changed */
 }
 
 header > h2 {
