--- a/src/components/NavMenu/NavMenu.module.css
+++ b/src/components/NavMenu/NavMenu.module.css
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30px;
-    height: 20px;
+    width: 50px;    /* Changed */
+    height: 40px;   /* Changed */
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
@@ -19,7 +19,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 2;
+    z-index: 1000;  /* Changed */
 }
 
 nav {
@@ -31,7 +31,7 @@ nav {
     height: 100%;
     transition: transform 0.2s ease, opacity 0.2s ease;
     transform: translateX(-100%);
-    z-index: 1;
+    z-index: 1000;  /* Changed */
     opacity: 0;
 }
 
@@ -80,6 +80,7 @@ nav > ul {
     padding-left: calc((var(--nav-menu-width) / 2));
     text-align: left;
 }
+
 .line {
     width: 93%;
     height: 3px;
