--- a/src/components/ProductList/ProductList.module.css
+++ b/src/components/ProductList/ProductList.module.css
@@ -2,7 +2,7 @@
 
 .product-list-page {
     margin-top: 100px;
-    display: inline;
+    /* display: inline; */
 }
 
 .products-list-div {
