--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,18 @@
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
-
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box; /* Changed */
+}
+
+*, *::before, *::after {    /* Changed */
+    box-sizing: inherit;    /* Changed */
 }
 
 a {
@@ -18,6 +21,7 @@ a {
     color: #646cff;
     text-decoration: inherit;
 }
+
 a:hover {
     color: #535bf2;
 }
@@ -25,7 +29,8 @@ a:hover {
 body {
     margin: 0;
     display: flex;
-    place-items: center;
+    /* place-items: center; */ /* Changed */
+    flex-direction: column; /* Changed */
     min-width: 320px;
     min-height: 100vh;
 }
@@ -46,9 +51,11 @@ button {
     cursor: pointer;
     transition: border-color 0.25s;
 }
+
 button:hover {
     border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
